<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_item_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor2"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="qa.edu.qu.cmps312.todomanager.AddItemForm">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/title"
        android:textSize="@dimen/twenty_sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btncolor"
        android:hint="@string/title_hint"
        android:textColorLink="@color/btncolor"
        android:textSize="@dimen/fifteen_sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ten_dp"
        android:background="@android:color/white"
        android:text="@string/status"
        android:textSize="@dimen/twenty_sp"
        android:textStyle="bold" />


    <RadioGroup
        android:id="@+id/statusRG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/doneRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty_sp"
            android:buttonTint="@color/btncolor"
            android:paddingEnd="@dimen/onefifty_dp"
            android:text="@string/done" />

        <RadioButton
            android:id="@+id/notDoneRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/btncolor"
            android:text="@string/not_done" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:background="@android:color/white"
        android:text="@string/priority"
        android:textSize="@dimen/twenty_sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/priorityRG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/lowRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty_sp"
            android:buttonTint="@color/btncolor"
            android:paddingRight="@dimen/fifty_dp"
            android:text="@string/low" />

        <RadioButton
            android:id="@+id/mediumRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/btncolor"
            android:paddingRight="@dimen/fifty_dp"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/highRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/btncolor"
            android:text="@string/high" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ten_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:background="@android:color/white"
        android:text="@string/date_time"
        android:textSize="@dimen/twenty_sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/ten_dp"
                android:layout_marginTop="@dimen/ten_dp"
                android:text="@string/date_holder"
                android:textSize="@dimen/fifteen_sp"
                android:id="@+id/dateText"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chooseDate"
                android:text="@string/choose_the_date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/ten_dp"
                android:layout_marginTop="@dimen/ten_dp"
                android:text="@string/time_holder"
                android:textSize="@dimen/fifteen_sp"
                android:id="@+id/timeTV"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chooseTime"
                android:text="@string/choose_the_time"
                android:id="@+id/timeTextBtn"/>
        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:paddingTop="@dimen/hundred_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancelAddTask"
            android:text="@string/cancel"
            android:id="@+id/cencelBtn"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="resetForm"
            android:text="@string/reset"
            android:id="@+id/resetBtn"
            android:layout_centerHorizontal="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:onClick="addNewTask"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>


</LinearLayout>
