<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleTV"
        android:textSize="@dimen/fifteen_sp"
        android:textStyle="bold"
        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:id="@+id/doneCB"
        android:layout_below="@id/titleTV"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/priority_"
        android:layout_alignBaseline="@id/doneCB"
        android:id="@+id/priorityText"
        android:layout_marginRight="@dimen/ten_dp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/priorityText"
        android:layout_toRightOf="@id/priorityText"
        android:id="@+id/priorityTV"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:id="@+id/dateText"
        android:layout_below="@id/doneCB"
        android:layout_marginStart="@dimen/ten_dp"
        android:layout_marginEnd="@dimen/ten_dp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/dateText"
        android:layout_toRightOf="@id/dateText"
        android:id="@+id/dateTV"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:id="@+id/timeText"
        android:layout_below="@id/dateText"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginStart="@dimen/ten_dp"
        android:layout_marginEnd="@dimen/ten_dp"
        android:layout_marginBottom="@dimen/ten_dp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/timeText"
        android:layout_toRightOf="@id/timeText"
        android:id="@+id/timeTV"/>


</RelativeLayout>